--- a/public/chat.html
+++ b/public/chat.html
@@ -46,7 +46,7 @@
         <input type="text" id="message" placeholder="Type your message here...">
         <button onclick="sendMessage()">Send</button>
     </div>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
     <script>
         const socket = io();
 
